# gedai

./: .gitignore  MANIFEST.in  README.md  gedai_benchmark_correlation.csv  gedai_benchmark_rrmse.csv  gedai_benchmark_snr.csv  gedai_benchmark_time.csv  index.html  pyGEDAI_benchmark.py  pyGEDAI_only_run_benchmark_denoising_simulations.m  pygedai_EEGLAB_denoiser.py  pyproject.toml
.github/: release.yaml
.github/workflows/: bot.yaml  doc.yaml  publish.yaml  pytest.yaml  stubs.yaml
benchmark/: gedai_benchmark_correlation.csv  gedai_benchmark_rrmse.csv  gedai_benchmark_snr.csv  gedai_benchmark_time.csv  pyGEDAI_benchmark.m  pyGEDAI_benchmark.py  pygedai_EEGLAB_denoiser.py
benchmark/eeglab/: denoise_and_plot.py
dev/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/_downloads/6feb91bb52b3902f615925e40a228e87/: 00_gedai.ipynb
dev/_static/: documentation_options.js
dev/api/: gedai.html  index.html  logging.html
dev/dev/: development.html  index.html
dev/dev/changes/: index.html  latest.html
dev/install/: index.html
dev/license/: index.html
doc/: conf.py  index.rst  install.rst  links.inc  references.bib  sg_execution_times.rst
doc/api/: gedai.rst  index.rst  logging.rst
doc/changes/: authors.inc  latest.rst
doc/dev/: development.rst  index.rst
doc/dev/changes/: authors.inc  latest.rst  latest.rst.template
doc/install/: index.rst
doc/license/: index.rst
gedai/: __init__.py
gedai/commands/tests/: test_main.py
gedai/eeglab/: denoise_and_plot.py
gedai/gedai/: __init__.py  covariances.py  decompose.py  gedai.py
gedai/gedai/tests/: test_gedai.py
gedai/sensai/: __init__.py  sensai.py
gedai/utils/: _checks.py  _docs.py  config.py
gedai/utils/tests/: test_docs.py
gedai/viz/: __init__.py  compare.py
gedai/wavelet/: __init__.py  _modwt.py  transform.py
tools/: stubgen.py
tutorials/: 00_gedai.py  20_gedai_online.py  20_gedai_spectral.py
