[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0', 'setuptools_scm>=8']

[project]
authors = [
  {email = 'tomas.ros@gmail.com', name = 'Tomas Ros'},
  {email = 'victor.ferat@live.fr', name = 'Victor Férat'},
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]
dependencies = [
  'joblib',
  'click',
  'numpy>=1.23,<3',
  'mne>=1.9.0',
  'h5py',
  'pywavelets>=1.8.0',
  'scikit-learn>=1.6.1',
  'packaging',
  'psutil',
]
description = 'GEDAI in python.'
dynamic = ["version"]
keywords = [
  'python',
  'gedai',
]
maintainers = [
  {email = 'victor.ferat@live.fr', name = 'Victor Férat'},
]
name = 'gedai'
readme = 'README.md'
requires-python = '>=3.10'

[project.optional-dependencies]
all = [
  'gedai[build]',
  'gedai[doc]',
  'gedai[stubs]',
  'gedai[style]',
  'gedai[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'pydata_sphinx_theme',
  'intersphinx_registry',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
  'myst_parser',
]
full = [
  'gedai[all]',
]
stubs = [
  'mypy',
  'ruff>=0.6.0',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
gedai = 'gedai.commands.main:run'

[project.urls]
documentation = 'https://github.com/neurotuning/pyGEDAI'
homepage = 'https://github.com/neurotuning/pyGEDAI'
source = 'https://github.com/neurotuning/pyGEDAI'
tracker = 'https://github.com/neurotuning/pyGEDAI/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/gedai/_version.py',
  '**/gedai/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904',  # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100',  # 'Missing docstring in public module'
  'D104',  # 'Missing docstring in public package'
  'D107',  # 'Missing docstring in __init__'
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']
'tutorials/*' = ['D205', 'D400', 'T201']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["gedai.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "gedai/_version.py"
version_scheme = "release-branch-semver"

[tool.setuptools.packages.find]
exclude = ['gedai*tests']
include = ['gedai*']

[tool.setuptools.package-data]
'gedai' = [
  'gedai/data/OPENMEEG_BEM_leadfield_4_GEDAI_343_electrodes.mat',
  'gedai/data/fsavLEADFIELD_4_GEDAI.mat'
]

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true




